[static][css] updated modern-business.css: patch for table.google-visualization-orgchart-table and bootstrap table border-collapse issue

--- a/static/css/modern-business.css
+++ b/static/css/modern-business.css
@@ -48,6 +48,10 @@ header.carousel .fill {
     font-size: 100px;
 }
 
+/* Section Page Styles */
+table.google-visualization-orgchart-table {
+    border-collapse:initial;
+}
 /* Pricing Page Styles */
 
 .price {
